added CSS rules to get a proper display of each image

--- a/src/components/PictureViewer/PictureViewer.css
+++ b/src/components/PictureViewer/PictureViewer.css
@@ -1,8 +1,12 @@
 .pictureViewer {
 	grid-area: pictureViewer;
 	background-color: #1c313a;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 
-.pictureViewer img{
-    width: 100%;
+.pictureViewer img {
+	max-width: 100%;
+	max-height: 100%;
 }
