--- a/src/components/PictureViewer/PictureViewer.css
+++ b/src/components/PictureViewer/PictureViewer.css
@@ -1,12 +1,40 @@
 .pictureViewer {
+	/* define the name of this grid area */
 	grid-area: pictureViewer;
 	background-color: #1c313a;
+	/* center the images in the grid cell */
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	/* position relative to be able to have the two floating arrows in absolute position */
+	position: relative;
 }
 
+/* constrain the width and height to fit in the grid cell allocated to images */
 .pictureViewer img {
 	max-width: 100%;
 	max-height: 100%;
+}
+
+.pictureViewer .arrow {
+	position: absolute;
+	opacity: 0;
+	background-color: #1c313a;
+	height: 100%;
+	width: 20%;
+	text-align: center;
+	line-height: 100%;
+	font-size: 4em;
+}
+
+.pictureViewer .left-arrow {
+	left: 0;
+}
+
+.pictureViewer .right-arrow {
+	right: 0;
+}
+
+.pictureViewer .arrow:hover {
+	opacity: 0.8;
 }
