--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,10 @@
 		'navLeft slider navRight';
 	height: 100%;
 }
+
+.icon {
+	color: white;
+	font-size: 2em;
+	padding-top: 15px;
+	cursor: pointer;
+}
