--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -2,4 +2,25 @@
 	grid-area: slider;
 	background-color: #1c313a;
 	user-select: none;
+	overflow-x: auto;
+}
+
+.slider-list {
+	width: 100%;
+	height: 140px;
+	display: flex;
+	flex-wrap: nowrap;
+	margin: 0;
+	padding: 5px 0px;
+	-webkit-margin-after: 0;
+}
+
+.slider-item {
+	list-style: none;
+	height: 130px;
+	flex: 0 0 auto;
+}
+
+.slider-item img {
+	max-height: 100%;
 }
